# cpp_util

./: .gitignore  CMakeLists.txt  LICENSE  README.md  array.cpp  array.hpp  util.cpp  util.h  util.hpp  util.sln  util.vcxproj  util.vcxproj.filters
fileutil/: CMakeLists.txt  fileutil.hpp  read_file.cpp
include/: path_helper.h
src/: path_helper.cpp
test/: CMakeLists.txt  test_path_helper.cpp
